# lol_bayes_auth

./: README.md  pyproject.toml
.github/workflows/: python-app.yml
lol_bayes_auth/: __init__.py  auth.py
tests/: test_auth.py
